# KigsTests

./: .gitignore  CMakeLists.txt  LICENSE  README.md
projects/: CMakeLists.txt
projects/Arbres/: CMakeLists.txt  index.html  indexDebug.html
projects/Arbres/Android/: AndroidManifest.xml  build.xml  kigs.Arbres.Packaging.androidproj
projects/Arbres/Android/assets/: AppInit.xml  LaunchScreen.xml  Screen_Main.xml  imgui.ini  laby.json
projects/Arbres/Android/res/values/: strings.xml
projects/Arbres/Android/src/com/kigs/: ArbresEmpty.java
projects/Arbres/Headers/: AI.h  Arbres.h  Case.h  KigsApplication.h
projects/Arbres/Sources/: AI.cpp  Arbres.cpp  Case.cpp
projects/IcosahedronNSpacePartition/: CMakeLists.txt  index.html  indexDebug.html
projects/IcosahedronNSpacePartition/Android/: AndroidManifest.xml  build.xml  kigs.IcosahedronNSpacePartition.Packaging.androidproj
projects/IcosahedronNSpacePartition/Android/res/values/: strings.xml
projects/IcosahedronNSpacePartition/Android/src/com/kigs/: IcosahedronNSpacePartitionEmpty.java
projects/IcosahedronNSpacePartition/Docs/: construction.pdn
projects/IcosahedronNSpacePartition/Headers/: ClassificationIcosahedron.h  Icosahedron.h  IcosahedronNSpacePartition.h  KigsApplication.h  MeshUtils.h
projects/IcosahedronNSpacePartition/Ressources/: AppInit.xml  AssetManagerRules.json
projects/IcosahedronNSpacePartition/Ressources/toPack/: LaunchScreen.xml
projects/IcosahedronNSpacePartition/Sources/: ClassificationIcosahedron.cpp  Icosahedron.cpp  IcosahedronNSpacePartition.cpp  MeshUtils.cpp
projects/MeshSimplifier/: CMakeLists.txt  index.html  indexDebug.html
projects/MeshSimplifier/Android/: AndroidManifest.xml  build.xml  kigs.MeshSimplifier.Packaging.androidproj
projects/MeshSimplifier/Android/res/values/: strings.xml
projects/MeshSimplifier/Android/src/com/kigs/: MeshSimplifierEmpty.java
projects/MeshSimplifier/Headers/: KigsApplication.h  MeshSimplifier.h
projects/MeshSimplifier/Ressources/: AppInit.xml  AssetManagerRules.json  almostbox.raw3d  complex.raw3d  complexcao.raw3d  coude.raw3d  crash.raw3d  crashAgain.raw3d  simplebox.raw3d
projects/MeshSimplifier/Ressources/toPack/: LaunchScreen.xml  Screen_Main.xml
projects/MeshSimplifier/Sources/: MeshSimplifier.cpp
projects/PacMan/: CMakeLists.txt
projects/PacMan/Android/: kigs.PacMan.Packaging.androidproj
projects/PacMan/Headers/: Board.h  Case.h  CharacterBase.h  GameLoop.h  Ghost.h  KigsApplication.h  PacMan.h  Player.h
projects/PacMan/Ressources/: AMLastDone.json  AppInit.xml
projects/PacMan/Ressources/toPack/: LaunchScreen.xml  Screen_Main.xml  laby.json
projects/PacMan/Sources/: Board.cpp  CharacterBase.cpp  GameLoop.cpp  Ghost.cpp  PacMan.cpp  Player.cpp
projects/TweetFrequency/: CMakeLists.txt
projects/TweetFrequency/Headers/: KigsApplication.h  TweetFrequency.h  TwitterAccount.h
projects/TweetFrequency/Sources/: TweetFrequency.cpp  TwitterAccount.cpp
projects/TwitterAnalyser/: CMakeLists.txt
projects/TwitterAnalyser/Headers/: CommonTwitterFSMStates.h  GraphDrawer.h  ScrapperManager.h  TwitterAnalyser.h  TwitterConnect.h
projects/TwitterAnalyser/Ressources/: launchParams.json
projects/TwitterAnalyser/Ressources/toPack/: Screen_Main.xml
projects/TwitterAnalyser/Sources/: CommonTwitterFSMStates.cpp  FollowersFSM.cpp  GraphDrawer.cpp  LikersFSM.cpp  RetweetFSM.cpp  ScrapperManager.cpp  TopFSM.cpp  TwitterAnalyser.cpp  TwitterConnect.cpp
projects/testFileManager/: CMakeLists.txt  index.html  indexDebug.html
projects/testFileManager/Android/: AndroidManifest.xml  build.xml  kigs.testFileManager.Packaging.androidproj
projects/testFileManager/Android/assets/: files.bundle  someAssets.kpkg
projects/testFileManager/Android/assets/Skin2/: Screen_Main.xml
projects/testFileManager/Android/res/values/: strings.xml
projects/testFileManager/Android/src/com/kigs/: testFileManagerEmpty.java
projects/testFileManager/Headers/: KigsApplication.h  testFileManager.h
projects/testFileManager/Sources/: testFileManager.cpp
projects/testPixelSprites/: CMakeLists.txt  index.html  indexDebug.html
projects/testPixelSprites/Android/: AndroidManifest.xml  build.xml  kigs.testPixelSprites.Packaging.androidproj
projects/testPixelSprites/Android/assets/: AppInit.xml  LaunchScreen.xml  Screen_Main.xml  UISprites.json  dino.json
projects/testPixelSprites/Android/res/values/: strings.xml
projects/testPixelSprites/Android/src/com/kigs/: testPixelSpritesEmpty.java
projects/testPixelSprites/Headers/: KigsApplication.h  testPixelSprites.h
projects/testPixelSprites/Sources/: testPixelSprites.cpp
projects/testXLSX/: CMakeLists.txt  index.html  indexDebug.html
projects/testXLSX/Android/: AndroidManifest.xml  build.xml  kigs.testXLSX.Packaging.androidproj
projects/testXLSX/Android/assets/: tst.xlsx
projects/testXLSX/Android/res/values/: strings.xml
projects/testXLSX/Android/src/com/kigs/: testXLSXEmpty.java
projects/testXLSX/Headers/: KigsApplication.h  XLSXDocument.h  XLSXElementRef.h  XLSXSheet.h  XMLArchiveManager.h  testXLSX.h
projects/testXLSX/Sources/: XLSXDocument.cpp  XLSXElementRef.cpp  XLSXSheet.cpp  XMLArchiveManager.cpp  testXLSX.cpp
